--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,23 +2,21 @@ version: '3'
 
 services:
 
-#  traefik:
-#    image: traefik:2.0
-#    command:
-#      - --api.insecure=true
-#      - --api.dashboard=true
-#      - --providers.docker
-#      - --providers.docker.exposedByDefault=false
-#    ports:
-#      - "80:80"
-#    volumes:
-#      - /var/run/docker.sock:/var/run/docker.sock
+  traefik:
+    image: traefik:3.0
+    command:
+      - --api.insecure=true
+      - --api.dashboard=true
+      - --providers.docker
+      - --providers.docker.exposedByDefault=false
+    ports:
+      - "80:80"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
 
   # The container that contains Symfony and GraphQLite
   api:
     image: thecodingmachine/php:7.4-v3-apache
-    ports:
-      - "81:80"
     labels:
       - traefik.enable=true
       - traefik.http.routers.api_router.rule=Host(`api.localhost`)
@@ -26,10 +24,7 @@ services:
       APACHE_DOCUMENT_ROOT: public
       PHP_EXTENSION_XDEBUG: 1
       PHP_EXTENSION_INTL: 1
-#      PHP_INI_XDEBUG__PROFILER_ENABLE: 1
-#      PHP_INI_XDEBUG__PROFILER_OUTPUT_DIR: /var/www/html/profiling
-#      PHP_INI_XDEBUG__PROFILER_OUTPUT_NAME: cachegrind.out.%s.%u
-      DATABASE_URL: mysql://root:secret@mysql:3306/demo?serverVersion=5.7
+      DATABASE_URL: mysql://root:secret@mysql:3306/demo
       STARTUP_COMMAND_1: composer install
       STARTUP_COMMAND_2: sleep 10 # Wait for DB setup
       STARTUP_COMMAND_3: bin/console doctrine:migration:migrate --no-interaction || true
@@ -40,19 +35,16 @@ services:
       - mysql
 
   mysql:
-    image: thecodingmachine/mysql:5.7-v1
+    image: mysql:8
+    command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: secret
       MYSQL_DATABASE: demo
     tmpfs:
       - /var/lib/mysql
-#    volumes:
-#      - mysql_data:/var/lib/mysql
 
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin:4.7
-    ports:
-      - "82:80"
+    image: phpmyadmin/phpmyadmin:5
     labels:
       - traefik.enable=true
       - traefik.http.routers.phpmyadmin_router.rule=Host(`phpmyadmin.localhost`)
@@ -65,7 +57,6 @@ services:
   front-svelte:
     image: thecodingmachine/nodejs:12
     ports:
-      - "83:3000"
       - "10000:10000" # for Sapper live reload
     labels:
       - traefik.enable=true
@@ -77,11 +68,9 @@ services:
     volumes:
       - ./front-svelte:/usr/src/app:delegated
 
-  # The container that contains Javascript / SPA (SvelteJS)
+  # The container that contains Javascript / SPA (ReactJS)
   front-react:
     image: thecodingmachine/nodejs:12
-    ports:
-      - "84:3000"
     labels:
       - traefik.enable=true
       - traefik.http.routers.react_router.rule=Host(`react.localhost`)
@@ -91,8 +80,3 @@ services:
       STARTUP_COMMAND_2: "yarn run start"
     volumes:
       - ./front-react:/usr/src/app:delegated
-
-volumes:
-
-  mysql_data:
-    driver: local
